# espflash-ndk

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
scripts/: setup-ndk.sh
src/: lib.rs
